# glnis

./: .gitignore  README.md  flake.nix  pyproject.toml  scalar_box_mc.toml  test.py
examples/: gg_hhh_1L_xspace.toml
examples/epem_a_ttxh/: LO.toml  LO_semi_inclusive.toml  NLO.toml  NLO_GL08.toml  NLO_GL08_gl_heur.toml  NLO_GL18.toml  NLO_GL18_long_run.toml  NLO_GL18_sgn_strat.toml  NLO_GL20.toml
examples/scalar/: 2_point_3_loop.toml  2_point_4_loop.toml  3_point_1_loop.toml  3_point_1_loop_spherical.toml  4_point_1_loop.toml  4_point_4_loop.toml  4_point_6_loop.toml  6_point_2_loop.toml
examples/vacuum/: bugblatter_t030.toml  sunrise.toml  sunrise_sgn_strat.toml
gammaloop_files/: gl.makefile  glnis.finder
gammaloop_files/dot_files/: physical_2L_6photons.dot  scalar_2_point_3_loop.dot  scalar_box.dot  (+4 more)
settings/: 1L_phys_layer_test.toml  aa_aa_1L.toml  default.toml  euclidean_1L_6photons.toml  euclidean_2L_6photons.toml  gg_hhh_1L.toml  kaapos_sunset.toml  orientation_threshold_1L_6photons.toml  orientation_threshold_2L_6photons.toml  qqx_aaa_pentabox.toml  scalar_2_point_3_loop.toml  scalar_2_point_4_loop.toml  scalar_3_point_1_loop.toml  scalar_4_point_4_loop.toml  scalar_4_point_6_loop.toml  scalar_6_point_2_loop.toml  scalar_box.toml  test_hpcomp.toml  test_mc.toml  test_multigaussian.toml  test_nomc.toml  threshold_1L_6photons.toml
tests/: 2d_slices.py  anubis.py  multi_gaussian_havana.py  par_spl_comp.py  reduced_param_test.py  result_new.txt  result_old.txt  slice_plots_old.py  state_import.py  test.toml  test_fermimc.toml  test_mc.toml  test_nomc.toml
(+212 files in other folders)
