[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glnis"
version = "0.1.0"
description = "Flexible application of MadNIS for the calculation of GammaLoop integrands."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Nic Fink", email = "nic.fink@students.unibe.ch" }
]

dependencies = [
    "numpy>=2.2,<3",
    "torch>=2.8,<3",
    "symbolica>=0.18,<0.19",
    "vegas>=6.2,<7",
    "pydot>=3.0,<4",
    "matplotlib>=3.6,<4",
    "madnis @ git+https://github.com/madgraph-ml/madnis.git@dev",
    "momtrop @ git+https://github.com/Fink-Nic/momtrop.git@main",
    "kaapos @ git+https://github.com/Fink-Nic/thermal_integrand_examples.git@main",
]

[project.scripts]
glnis = "glnis.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
